# eopdev

./: .gitignore  CMakeLists.txt  Doxygen.config  LICENSE  LICENSE.md  README.md  __init__.py  compile  create-doc  index.md  main.cc  pymodule.py
cmake/: CTestTestfile.cmake.in
doc/: doc.rst
doc/examples/: dmatpol.inp  example_python.inp  oep.inp  solver.inp
doc/examples/prog/: example_cphf.cc  example_davidson_liu.cc  example_gefp.cc  example_integrals_iter.cc  example_scf_perturb.cc  example_timing.cc
doc/examples/psithon/: example_python.inp  scan-2.inp
doc/git/: doc_OEP_design.md  doc_density_fitting.md  doc_implemented_models.md  doc_oep_design.md  doc_oep_types.md  doc_programming_etiquette.md
doc/images/: oepdev-doxygen-logo-sample.xcf
gefp/: README.md  setup.py
gefp/doc/examples/: part.inp
gefp/gefp/: __init__.py
gefp/gefp/basis/: __init__.py  _util.py  edf.py  optimize.py  parameters.py  quambo.py
gefp/gefp/core/: __init__.py  driver.py  utilities.py
gefp/gefp/density/: __init__.py  ci.py  dfi.py  dft.py  dmft.py  dms.py  functional.py  opdm.py  parameters.py  partitioning.py  population.py  rvs.py  scf.py  slv_slvpar.py
gefp/gefp/energy/: __init__.py  efp2.py
gefp/gefp/math/: __init__.py  composite.py  matrix.py  orthonorm.py
gefp/gefp/solvshift/: __init__.py  fragment.py  mdinput.py
include/: oepdev_files.h  oepdev_manual.h  oepdev_options.h
include/doxygen/: oepdev_manual.h  oepdev_modules.h  oepdev_namespaces.h
misc/dfi/: dfi.py
misc/dfi/tests/: DFI_J.py  DFI_JK.py  run_tests.sh
misc/latex/: footer.tex  header.tex  references.bib  toc.eps
misc/patch/: psi4-1.2-psiapi_extend-for-oepdev.patch  psi4-1.2.1-psiapi_extend-for-oepdev.patch  run_patch-psi4-1.2.1_git.406f4de  run_patch-psi4-1.2_git.9d4a61c
misc/python/: A24_hcn_bb.py  multipole-components_psi4.py  multipole-components_psi4.txt  timer.py
oepdev/export/: export_cphf.cc  export_dmtp.cc  export_gefp.cc  export_oep.cc  export_solver.cc  export_util.cc
oepdev/lib3d/: dmtp.h  dmtp_base.cc  dmtp_camm.cc  esp.cc  esp.h  space3d.cc  space3d.h
oepdev/libgefp/: fragmented_system.cc  gefp.cc  gefp.h  gefp_efp2.cc  gefp_frag.cc  gefp_oep_efp2.cc  gefp_polar_abinitio.cc  gefp_polar_base.cc  gefp_polar_ffabinitio.cc  gefp_polar_nonuniform_base.cc  gefp_polar_nonuniform_field_1.cc  gefp_polar_nonuniform_field_1_grad_1.cc  gefp_polar_nonuniform_field_2.cc  gefp_polar_nonuniform_field_2_grad_1.cc  gefp_polar_uniform_base.cc  gefp_polar_uniform_field_1.cc  gefp_polar_uniform_field_2.cc
oepdev/libints/: eri.cc  eri.h  eri_symm.cc  eri_symm.h  recurr.cc  recurr.h
oepdev/liboep/: oep.cc  oep.h  oep_base.cc  oep_coupling_eet.cc  oep_energy_coul.cc  oep_energy_ct.cc  oep_energy_pauli.cc  oep_gdf.cc  oep_gdf.h
oepdev/libpsi/: integral.cc  integral.h  multipole_potential.cc  multipole_potential.h  osrecur.cc  osrecur.h  potential.cc  potential.h
oepdev/libsolver/: solver.h  solver_base.cc  solver_coupling_eet.cc  solver_energy_coul.cc  solver_energy_ct.cc  solver_energy_pauli.cc  ti_data.cc  ti_data.h
oepdev/libtest/: basic.cc  basis_rotation.cc  camm.cc  cis_rhf.cc  cis_rhf_dl.cc  cis_rhf_explicit.cc  cis_uhf.cc  cis_uhf_dl.cc  cphf.cc  ct_energy_benchmark_ol.cc  ct_energy_oep_based_ol.cc  dmatpol.cc  dmatpolX.cc  dmtp_energy.cc  dmtp_pot_field.cc  dmtp_superimposition.cc  efp2_energy.cc  eri_1_1.cc  eri_2_2.cc  eri_3_1.cc  esp_solver.cc  espsolver.cc  kabsch_superimposition.cc  oep_efp2_energy.cc  points_collection3d.cc  quambo.cc  rep_energy_benchmark_dds.cc  rep_energy_benchmark_efp2.cc  rep_energy_benchmark_hs.cc  rep_energy_benchmark_murrell_etal.cc  rep_energy_benchmark_ol.cc  rep_energy_oep_based_murrell_etal.cc  scf_perturb.cc  test.cc  test.h  test_custom.cc  unitary_optimizer.cc  unitary_optimizer_2.cc  unitary_optimizer_4_2.cc
oepdev/libutil/: basis_rotation.cc  basis_rotation.h  cis.h  cis_base.cc  cis_rhf.cc  cis_rhf_direct.cc  cis_rhf_dl.cc  cis_rhf_explicit.cc  cis_uhf.cc  cis_uhf_dl.cc  cis_uhf_explicit.cc  cphf.cc  cphf.h  davidson_liu.cc  davidson_liu.h  diis.cc  diis.h  esp.cc  esp.h  graham_schmidt.cc  graham_schmidt.h  gram_schmidt.cc  gram_schmidt.h  integrals_iter.cc  integrals_iter.h  kabsch_superimposer.cc  kabsch_superimposer.h  potential.cc  potential.h  quambo.cc  quambo.h  scf_perturb.cc  scf_perturb.h  solver.cc  solver.h  solver_energy_coul.cc  solver_energy_ct.cc  solver_energy_pauli.cc  space3d.cc  space3d.h  (+7 more)
papers/1_dmatpol/: do-r2.sh  do-r3.sh  paper-r0.tex  paper-r1.tex  paper-r2.tex  paper-r3.tex  paper-submit.tex  references.bib
papers/1_dmatpol/data/: compare.gpl
papers/2_oep_technique/: do-r2.sh  header.tex  paper-r0.tex  paper-r1.tex  paper-r2.tex  references.bib
papers/2_oep_technique.CT/: do-r0.sh  do-r1.sh  do-r2.sh  do-r3.sh  eqn.label  paper-r0.tex  paper-r1.tex  paper-r2.tex  paper-r3.tex  paper-r4.tex  references.bib  supplementary-r2.tex
papers/3_eet.I.Theory/: paper-r0.tex
papers/3_oep_technique.Pauli/: Makefile  Makefile.old  do-r0.sh  do-r1.sh  header.tex  paper-r0.tex  paper-r1.tex  paper-r2.tex  paper-r3.tex  references.bib  submit.tex  supplementary-r1.tex  supplementary-r3.tex
papers/4_eet.I.Theory/: header.tex  paper-r0.tex  references.bib
tests/oepdev/: basic.inp  basis_rotation.inp  camm.inp  cis-rhf.inp  cis-rhf_direct.inp  cis-rhf_dl.inp  cis-rhf_dl_fc.inp  cis-uhf.inp  cis-uhf_dl.inp  cis-uhf_dl_fc.inp  cphf.inp  ct_energy_benchmark_ol.inp  ct_energy_benchmark_ol_quambo.inp  ct_energy_oep_based_ol.inp  ct_energy_oep_based_ol_quambo.inp  dmatpol.inp  dmatpol_X.inp  dmtp_energy.inp  dmtp_pot_field.inp  dmtp_superimposition.inp  efp2_energy.inp  efp2_energy_quambo.inp  eri_1_1.inp  eri_2_2.inp  eri_3_1.inp  esp_solver.inp  kabsch_superimposition.inp  oep_efp2_energy.inp  oep_efp2_energy_quambo.inp  points_collection3d.inp  quambo.inp  quambo_acbs.inp  quambo_mcbs.inp  ref_basic.py  rep_energy_benchmark_dds.inp  rep_energy_benchmark_efp2.inp  rep_energy_benchmark_hs.inp  rep_energy_benchmark_murrell_etal.inp  rep_energy_benchmark_ol.inp  rep_energy_oep_based_murrell_etal.inp  (+3 more)
(+159 files in other folders)
